--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  // Rust
     "rust-analyzer.checkOnSave.command": "clippy",
     "[rust]": {
       "editor.defaultFormatter": "rust-lang.rust-analyzer",
@@ -17,9 +18,14 @@
         "editorInlayHint.typeForeground": "#666866f0",
         "editorInlayHint.parameterForeground": "#5c5e5cf0",
         // colorize background of selected tab
-        "tab.activeBackground": "#ffffff20"
-      }
+        "tab.activeBackground": "#ffffff20",
+        // current selected file highlight in explorer list
+        "list.inactiveSelectionBackground": "#e80b0bd3",
+    }
     },
     "cSpell.words": ["dotenv", "dotenvy"],
-    "rust-analyzer.showUnlinkedFileNotification": false
+    "rust-analyzer.showUnlinkedFileNotification": false,
+
+  // Terminal
+  "terminal.integrated.showExitAlert": false,
   }
