--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = { version = "0.7.3", features = ["macros"] }
+axum = { version = "0.6.18", features = ["macros", "headers"] }
 bcrypt = "0.15.0"
 chrono = "0.4.31"
 dotenvy = "0.15.7"
