--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,3 +16,4 @@ sea-orm = { version = "0.12.10", features = ["runtime-tokio-rustls", "sqlx-postg
 serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
 tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
+validator = { version = "0.16.1", features = ["derive"] }
